kubernetes/bank-transfer_postgres.yml
apiVersion: v1
kind: Pod
metadata:
  name: bank-account-transfers-combined
spec:
  containers:
    - name: postgres
      image: postgres:16-alpine
      ports:
        - containerPort: 5432
      volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data

    - name: bank-account-transfers
      image: jcondotta/bank-account-transfers:latest
      ports:
        - containerPort: 8080
  volumes:
    - name: postgres-data
      emptyDir: {}
