kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-account-transfers
  labels:
    app: bank-account-transfers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-account-transfers
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1     # Allow 1 extra pod above desired count during update
      maxUnavailable: 1  # Allow 1 pod to be unavailable during update
  template:
    metadata:
      labels:
        app: bank-account-transfers
    spec:
      containers:
        - name: bank-account-transfers
          image: jcondotta/bank-account-transfers:latest
          ports:
            - containerPort: 8080
