kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: bank-account-transfers-pod
spec:
  containers:
    - name: bank-account-transfers
      image: jcondotta/bank-account-transfers:latest
      ports:
        - containerPort: 8080
