kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-account-transfers
  namespace: bank-account-transfers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-account-transfers
  template:
    metadata:
      labels:
        app: bank-account-transfers
    spec:
      containers:
        - name: bank-account-transfers
          image: bank-account-transfers:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bank-account-transfers
  namespace: bank-account-transfers
spec:
  selector:
    app: bank-account-transfers
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
