kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bank-account-transfers
spec:
  selector:
    app: bank-account-transfers
  ports:
    - name: http
      port: 80          # Port you expose inside the cluster
      targetPort: 8080  # Port your container listens on
      nodePort: 30080   # Port exposed on the host (must be 30000–32767)
  type: NodePort
