kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-account-transfers-ingress
  namespace: bank-account-transfers
spec:
  rules:
    - host: bank-account.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-account-transfers
                port:
                  number: 8080
